# agentic-ai-framework

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  test_phase3.py  test_phase4.py  test_phase5.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: agents.py  auth.py  executions.py  health.py  logs.py  mongodb.py  platforms.py  settings.py  studio.py  tools.py  tools_studio.py  weaviate.py  workflows.py
backend/app/common/: __init__.py
backend/app/common/base/: __init__.py  agent.py  chain.py  orchestrator.py  tool.py
backend/app/common/communication/: __init__.py  channels.py
backend/app/common/observability/: __init__.py  metrics.py  tracing.py
backend/app/common/providers/: __init__.py  embeddings.py  llm.py  vectorstore.py
backend/app/common/tools/: registry.py
backend/app/core/: exceptions.py  middleware.py  sanitization.py  security.py
backend/app/db/: mongodb.py  weaviate.py
backend/app/db/repositories/: __init__.py  base.py  log.py  settings.py  user.py
backend/app/mcp/: __main__.py  server.py  sse.py
backend/app/models/: __init__.py  agent.py  execution.py  log.py  platform.py  settings.py  tool.py  user.py  workflow.py
backend/app/schemas/: __init__.py  agent.py  auth.py  execution.py  log.py  platform.py  settings.py  studio.py  tool.py  workflow.py
backend/app/services/: __init__.py  auth.py  email.py  pdf_processor.py  upload_manager.py
backend/tests/mcp/: conftest.py  test_registry.py  test_server.py  test_sse.py
databases/: docker-compose.yml
docs/: UI-fixes.md  e2e-testing-plan.md  ed3d-plugins-analysis.md  git-submodules.md  hitl-checkpoint-flow.md  newsletter-user-guide.md  phase10-email-service.md  phase11-api-endpoints.md  phase12-frontend-infrastructure.md  phase13-frontend-components.md  phase7-writing-agent.md  phase8-preference-custom-prompt-agents.md  phase9-langgraph-orchestrator.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
issues/: Add-weaviate-mgmt-frontend.md  (+14 more)
(+269 files in other folders)
